--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,5 @@
 blackduckUsername=sysadmin
 blackduckPassword=blackduck
 blackduckAddress=10.3.8.223
+gmailUsername=redhat.jpmc.pilot
+gmailPassword=redhat123
