re-added sonatype configurations

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,6 @@
 blackduckUsername=sysadmin
 blackduckPassword=blackduck
 blackduckAddress=10.3.8.223
+nexusUsername=admin
+nexusPassword=admin123
+organizationId=28dba0d94c7e452d9dd1a32e2a51f5f6
