added new organization id

--- a/config.properties
+++ b/config.properties
@@ -3,4 +3,5 @@ blackduckPassword=blackduck
 blackduckAddress=10.3.8.223
 nexusUsername=admin
 nexusPassword=admin123
-organizationId=28dba0d94c7e452d9dd1a32e2a51f5f6
+#organizationId=28dba0d94c7e452d9dd1a32e2a51f5f6
+organizationId=9674fe8afe1e4cbbb1a9d7bca91053ee
