added new blackduck ip

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,7 @@
 blackduckUsername=sysadmin
 blackduckPassword=blackduck
-blackduckAddress=10.3.8.223
+#blackduckAddress=10.3.8.223
+blackduckAddress=10.3.10.47
 nexusUsername=admin
 nexusPassword=admin123
 #organizationId=28dba0d94c7e452d9dd1a32e2a51f5f6
